--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,14 +46,6 @@
   filter: blur(190px);
 }
 
-.glassmorphism {
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
-}
-
 .gradient-03 {
   position: absolute;
   width: 204px;
@@ -106,4 +98,23 @@
 
   background: #65c4fa;
   filter: blur(150px);
+}
+
+.transform-origin-center {
+  transform-origin: center;
+}
+.transition-transform {
+  transition: transform 0.2s ease-in-out;
+}
+.duration-200 {
+  transition-duration: 100ms;
+}
+.transform-origin-center:hover {
+  transform: scale(1.05);
+}
+
+.group:hover img {
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
